<resources>
    <string name="app_name">MDTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="note">随手记</string>
    <string name="memo">备忘录</string>
    <string name="all">全部</string>
    <string name="setting">设置</string>
    <string name="other">其他</string>
    <string name="like">我的收藏</string>
    <string name="title">标题</string>
    <string name="content">正文</string>
    <string name="addnote">新建便签</string>
    <string name="share">分享</string>
    <string name="addlike">收藏</string>
    <string name="notes">便签</string>
    <string name="color">选择颜色</string>
</resources>
