<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/all"
            android:icon="@mipmap/ic_content_copy_grey600_48dp"
            android:title="@string/all"/>
        <item android:id="@+id/note"
            android:icon="@mipmap/ic_content_paste_grey600_48dp"
            android:title="@string/note"/>
        <item android:id="@+id/memo"
            android:icon="@mipmap/ic_attach_file_grey600_48dp"
            android:title="@string/memo"/>
        <item android:id="@+id/like"
            android:icon="@mipmap/ic_favorite_outline_grey600_48dp"
            android:title="@string/like"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item android:id="@+id/setting"
                android:icon="@mipmap/ic_attach_file_grey600_48dp"
                android:title="@string/setting"/>
        </menu>
    </item>
</menu>